src/main/com/bearleft/shift/gen/ShiftParser.java
// Generated from R:/programming/shift/res\Shift.g4 by ANTLR 4.x
package com.bearleft.shift.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ShiftParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__2=1, T__1=2, T__0=3, INTEGER_LITERAL=4, FLOAT_LITERAL=5, STRING_LITERAL=6, 
		WS=7, NEWLINE=8, COMMENT=9, LINE_COMMENT=10, CLASS=11, FOR=12, WHILE=13, 
		IF=14, ELSE=15, DEF=16, NEW=17, RETURN=18, STATIC=19, TRUE=20, FALSE=21, 
		NULL=22, LPAREN=23, RPAREN=24, LBRACKET=25, RBRACKET=26, SEMI=27, COMMA=28, 
		DOT=29, EQ=30, AMP=31, BAR=32, CARET=33, PERCENT=34, PLUS=35, SUB=36, 
		STAR=37, SLASH=38, BANG=39, TILDE=40, QUESTION=41, COLON=42, EQEQ=43, 
		SPACESHIP=44, AMPAMP=45, BARBAR=46, PLUSPLUS=47, SUBSUB=48, STARSTAR=49, 
		PLUSEQ=50, SUBEQ=51, STAREQ=52, SLASHEQ=53, AMPEQ=54, BAREQ=55, CARETEQ=56, 
		PERCENTEQ=57, BANGEQ=58, GT=59, LT=60, LTLT=61, GTGT=62, GTGTGT=63, LTE=64, 
		GTE=65, IDENTIFIER=66;
	public static final String[] tokenNames = {
		"<INVALID>", "'->'", "'{'", "'}'", "INTEGER_LITERAL", "FLOAT_LITERAL", 
		"STRING_LITERAL", "WS", "NEWLINE", "COMMENT", "LINE_COMMENT", "'class'", 
		"'for'", "'while'", "'if'", "'else'", "'def'", "'new'", "'return'", "'static'", 
		"'true'", "'false'", "'null'", "'('", "')'", "'['", "']'", "';'", "','", 
		"'.'", "'='", "'&'", "'|'", "'^'", "'%'", "'+'", "'-'", "'*'", "'/'", 
		"'!'", "'~'", "'?'", "':'", "'=='", "'<=>'", "'&&'", "'||'", "'++'", "'--'", 
		"'**'", "'+='", "'-='", "'*='", "'/='", "'&='", "'|='", "'^='", "'%='", 
		"'!='", "'>'", "'<'", "'<<'", "'>>'", "'>>>'", "'<='", "'>='", "IDENTIFIER"
	};
	public static final int
		RULE_compilationUnit = 0, RULE_lineTerminator = 1, RULE_classDef = 2, 
		RULE_classMember = 3, RULE_method = 4, RULE_constructor = 5, RULE_field = 6, 
		RULE_parameterList = 7, RULE_argumentList = 8, RULE_blockStatement = 9, 
		RULE_statement = 10, RULE_expression = 11, RULE_forLoop = 12, RULE_whileLoop = 13, 
		RULE_ifStatement = 14, RULE_elseStatement = 15;
	public static final String[] ruleNames = {
		"compilationUnit", "lineTerminator", "classDef", "classMember", "method", 
		"constructor", "field", "parameterList", "argumentList", "blockStatement", 
		"statement", "expression", "forLoop", "whileLoop", "ifStatement", "elseStatement"
	};

	@Override
	public String getGrammarFileName() { return "Shift.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ShiftParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class CompilationUnitContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(ShiftParser.NEWLINE); }
		public TerminalNode EOF() { return getToken(ShiftParser.EOF, 0); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ShiftParser.NEWLINE, i);
		}
		public ClassDefContext classDef(int i) {
			return getRuleContext(ClassDefContext.class,i);
		}
		public List<ClassDefContext> classDef() {
			return getRuleContexts(ClassDefContext.class);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShiftListener ) ((ShiftListener)listener).enterCompilationUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShiftListener ) ((ShiftListener)listener).exitCompilationUnit(this);
		}
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE || _la==CLASS) {
				{
				setState(34);
				switch (_input.LA(1)) {
				case CLASS:
					{
					setState(32); classDef();
					}
					break;
				case NEWLINE:
					{
					setState(33); match(NEWLINE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(38);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(39); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineTerminatorContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(ShiftParser.NEWLINE, 0); }
		public TerminalNode SEMI() { return getToken(ShiftParser.SEMI, 0); }
		public LineTerminatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lineTerminator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShiftListener ) ((ShiftListener)listener).enterLineTerminator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShiftListener ) ((ShiftListener)listener).exitLineTerminator(this);
		}
	}

	public final LineTerminatorContext lineTerminator() throws RecognitionException {
		LineTerminatorContext _localctx = new LineTerminatorContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_lineTerminator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			_la = _input.LA(1);
			if ( !(_la==NEWLINE || _la==SEMI) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDefContext extends ParserRuleContext {
		public List<ClassMemberContext> classMember() {
			return getRuleContexts(ClassMemberContext.class);
		}
		public LineTerminatorContext lineTerminator(int i) {
			return getRuleContext(LineTerminatorContext.class,i);
		}
		public TerminalNode IDENTIFIER() { return getToken(ShiftParser.IDENTIFIER, 0); }
		public List<LineTerminatorContext> lineTerminator() {
			return getRuleContexts(LineTerminatorContext.class);
		}
		public ClassMemberContext classMember(int i) {
			return getRuleContext(ClassMemberContext.class,i);
		}
		public TerminalNode CLASS() { return getToken(ShiftParser.CLASS, 0); }
		public ClassDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShiftListener ) ((ShiftListener)listener).enterClassDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShiftListener ) ((ShiftListener)listener).exitClassDef(this);
		}
	}

	public final ClassDefContext classDef() throws RecognitionException {
		ClassDefContext _localctx = new ClassDefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43); match(CLASS);
			setState(44); match(IDENTIFIER);
			setState(45); match(2);
			setState(50);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NEWLINE) | (1L << DEF) | (1L << SEMI))) != 0)) {
				{
				setState(48);
				switch (_input.LA(1)) {
				case DEF:
					{
					setState(46); classMember();
					}
					break;
				case NEWLINE:
				case SEMI:
					{
					setState(47); lineTerminator();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(52);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(53); match(3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassMemberContext extends ParserRuleContext {
		public ConstructorContext constructor() {
			return getRuleContext(ConstructorContext.class,0);
		}
		public MethodContext method() {
			return getRuleContext(MethodContext.class,0);
		}
		public FieldContext field() {
			return getRuleContext(FieldContext.class,0);
		}
		public ClassMemberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classMember; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShiftListener ) ((ShiftListener)listener).enterClassMember(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShiftListener ) ((ShiftListener)listener).exitClassMember(this);
		}
	}

	public final ClassMemberContext classMember() throws RecognitionException {
		ClassMemberContext _localctx = new ClassMemberContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_classMember);
		try {
			setState(58);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(55); constructor();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(56); method();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(57); field();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodContext extends ParserRuleContext {
		public BlockStatementContext blockStatement() {
			return getRuleContext(BlockStatementContext.class,0);
		}
		public TerminalNode DEF() { return getToken(ShiftParser.DEF, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ShiftParser.IDENTIFIER, 0); }
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public TerminalNode EQ() { return getToken(ShiftParser.EQ, 0); }
		public MethodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShiftListener ) ((ShiftListener)listener).enterMethod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShiftListener ) ((ShiftListener)listener).exitMethod(this);
		}
	}

	public final MethodContext method() throws RecognitionException {
		MethodContext _localctx = new MethodContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_method);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60); match(DEF);
			setState(61); match(IDENTIFIER);
			setState(62); match(EQ);
			setState(63); match(2);
			setState(65);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(64); parameterList();
				}
				break;
			}
			setState(68);
			_la = _input.LA(1);
			if (((((_la - 4)) & ~0x3f) == 0 && ((1L << (_la - 4)) & ((1L << (INTEGER_LITERAL - 4)) | (1L << (FLOAT_LITERAL - 4)) | (1L << (STRING_LITERAL - 4)) | (1L << (NEWLINE - 4)) | (1L << (FOR - 4)) | (1L << (WHILE - 4)) | (1L << (IF - 4)) | (1L << (DEF - 4)) | (1L << (TRUE - 4)) | (1L << (FALSE - 4)) | (1L << (NULL - 4)) | (1L << (LPAREN - 4)) | (1L << (SEMI - 4)) | (1L << (PLUS - 4)) | (1L << (SUB - 4)) | (1L << (BANG - 4)) | (1L << (TILDE - 4)) | (1L << (PLUSPLUS - 4)) | (1L << (SUBSUB - 4)) | (1L << (IDENTIFIER - 4)))) != 0)) {
				{
				setState(67); blockStatement();
				}
			}

			setState(70); match(3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstructorContext extends ParserRuleContext {
		public BlockStatementContext blockStatement() {
			return getRuleContext(BlockStatementContext.class,0);
		}
		public TerminalNode NEW() { return getToken(ShiftParser.NEW, 0); }
		public TerminalNode DEF() { return getToken(ShiftParser.DEF, 0); }
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public TerminalNode EQ() { return getToken(ShiftParser.EQ, 0); }
		public ConstructorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShiftListener ) ((ShiftListener)listener).enterConstructor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShiftListener ) ((ShiftListener)listener).exitConstructor(this);
		}
	}

	public final ConstructorContext constructor() throws RecognitionException {
		ConstructorContext _localctx = new ConstructorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_constructor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72); match(DEF);
			setState(73); match(NEW);
			setState(74); match(EQ);
			setState(75); match(2);
			setState(77);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(76); parameterList();
				}
				break;
			}
			setState(80);
			_la = _input.LA(1);
			if (((((_la - 4)) & ~0x3f) == 0 && ((1L << (_la - 4)) & ((1L << (INTEGER_LITERAL - 4)) | (1L << (FLOAT_LITERAL - 4)) | (1L << (STRING_LITERAL - 4)) | (1L << (NEWLINE - 4)) | (1L << (FOR - 4)) | (1L << (WHILE - 4)) | (1L << (IF - 4)) | (1L << (DEF - 4)) | (1L << (TRUE - 4)) | (1L << (FALSE - 4)) | (1L << (NULL - 4)) | (1L << (LPAREN - 4)) | (1L << (SEMI - 4)) | (1L << (PLUS - 4)) | (1L << (SUB - 4)) | (1L << (BANG - 4)) | (1L << (TILDE - 4)) | (1L << (PLUSPLUS - 4)) | (1L << (SUBSUB - 4)) | (1L << (IDENTIFIER - 4)))) != 0)) {
				{
				setState(79); blockStatement();
				}
			}

			setState(82); match(3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(ShiftParser.DEF, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ShiftParser.IDENTIFIER, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode EQ() { return getToken(ShiftParser.EQ, 0); }
		public FieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_field; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShiftListener ) ((ShiftListener)listener).enterField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShiftListener ) ((ShiftListener)listener).exitField(this);
		}
	}

	public final FieldContext field() throws RecognitionException {
		FieldContext _localctx = new FieldContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_field);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84); match(DEF);
			setState(85); match(IDENTIFIER);
			setState(88);
			_la = _input.LA(1);
			if (_la==EQ) {
				{
				setState(86); match(EQ);
				setState(87); expression(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterListContext extends ParserRuleContext {
		public ArgumentListContext argumentList() {
			return getRuleContext(ArgumentListContext.class,0);
		}
		public ParameterListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShiftListener ) ((ShiftListener)listener).enterParameterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShiftListener ) ((ShiftListener)listener).exitParameterList(this);
		}
	}

	public final ParameterListContext parameterList() throws RecognitionException {
		ParameterListContext _localctx = new ParameterListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_parameterList);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90); argumentList();
			setState(91); match(1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentListContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ShiftParser.IDENTIFIER, i);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(ShiftParser.IDENTIFIER); }
		public List<TerminalNode> COMMA() { return getTokens(ShiftParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ShiftParser.COMMA, i);
		}
		public ArgumentListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argumentList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShiftListener ) ((ShiftListener)listener).enterArgumentList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShiftListener ) ((ShiftListener)listener).exitArgumentList(this);
		}
	}

	public final ArgumentListContext argumentList() throws RecognitionException {
		ArgumentListContext _localctx = new ArgumentListContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_argumentList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93); match(IDENTIFIER);
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(94); match(COMMA);
				setState(95); match(IDENTIFIER);
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockStatementContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public LineTerminatorContext lineTerminator(int i) {
			return getRuleContext(LineTerminatorContext.class,i);
		}
		public List<LineTerminatorContext> lineTerminator() {
			return getRuleContexts(LineTerminatorContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blockStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShiftListener ) ((ShiftListener)listener).enterBlockStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShiftListener ) ((ShiftListener)listener).exitBlockStatement(this);
		}
	}

	public final BlockStatementContext blockStatement() throws RecognitionException {
		BlockStatementContext _localctx = new BlockStatementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_blockStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(102);
				_la = _input.LA(1);
				if (((((_la - 4)) & ~0x3f) == 0 && ((1L << (_la - 4)) & ((1L << (INTEGER_LITERAL - 4)) | (1L << (FLOAT_LITERAL - 4)) | (1L << (STRING_LITERAL - 4)) | (1L << (FOR - 4)) | (1L << (WHILE - 4)) | (1L << (IF - 4)) | (1L << (DEF - 4)) | (1L << (TRUE - 4)) | (1L << (FALSE - 4)) | (1L << (NULL - 4)) | (1L << (LPAREN - 4)) | (1L << (PLUS - 4)) | (1L << (SUB - 4)) | (1L << (BANG - 4)) | (1L << (TILDE - 4)) | (1L << (PLUSPLUS - 4)) | (1L << (SUBSUB - 4)) | (1L << (IDENTIFIER - 4)))) != 0)) {
					{
					setState(101); statement();
					}
				}

				setState(104); lineTerminator();
				}
				}
				setState(107); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((((_la - 4)) & ~0x3f) == 0 && ((1L << (_la - 4)) & ((1L << (INTEGER_LITERAL - 4)) | (1L << (FLOAT_LITERAL - 4)) | (1L << (STRING_LITERAL - 4)) | (1L << (NEWLINE - 4)) | (1L << (FOR - 4)) | (1L << (WHILE - 4)) | (1L << (IF - 4)) | (1L << (DEF - 4)) | (1L << (TRUE - 4)) | (1L << (FALSE - 4)) | (1L << (NULL - 4)) | (1L << (LPAREN - 4)) | (1L << (SEMI - 4)) | (1L << (PLUS - 4)) | (1L << (SUB - 4)) | (1L << (BANG - 4)) | (1L << (TILDE - 4)) | (1L << (PLUSPLUS - 4)) | (1L << (SUBSUB - 4)) | (1L << (IDENTIFIER - 4)))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public WhileLoopContext whileLoop() {
			return getRuleContext(WhileLoopContext.class,0);
		}
		public ForLoopContext forLoop() {
			return getRuleContext(ForLoopContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShiftListener ) ((ShiftListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShiftListener ) ((ShiftListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_statement);
		try {
			setState(113);
			switch (_input.LA(1)) {
			case INTEGER_LITERAL:
			case FLOAT_LITERAL:
			case STRING_LITERAL:
			case DEF:
			case TRUE:
			case FALSE:
			case NULL:
			case LPAREN:
			case PLUS:
			case SUB:
			case BANG:
			case TILDE:
			case PLUSPLUS:
			case SUBSUB:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(109); expression(0);
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 2);
				{
				setState(110); forLoop();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 3);
				{
				setState(111); whileLoop();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 4);
				{
				setState(112); ifStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
